--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-  change
+  change again and again
   <script src="/app.js" charset="utf-8"></script>
 </body>
 </html>
