style nav bar middle list

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>10-twitch</title>
+  <title>12-twitch</title>
   <link rel="stylesheet" href="/app.css">
 </head>
+
 <body>
+  <div class="app-main">
+    <!-- SIDEBAR -->
+    <div class="nav">
+      <div class="section">
+        <div class="container">
+          <div class="nav__content">
+            <a href="#"><img src="./images/Twitch_White_RGB.png" alt="twitch logo" class="nav__logo"></a>
+            <div class="nav__search">
+              <span class="nav__search-icon"><i class="fa fa-search" aria-hidden="true"></i></span>
+              <span><input type="text" placeholder="Search" class="nav__search-bar"></span>
+            </div>
+            <!-- SIDEBAR LIST -->
+            <div class="nav__list">
+              <a href="#"><div class="nav__list-item">
+                  <span class="nav__list-icon"><i class="fa fa-gamepad" aria-hidden="true"></i></span>
+                  <span class="nav__list-text">Games</span>
+                </div></a>
+              <a href="#"><div class="nav__list-item">
+                  <span class="nav__list-icon"><i class="fa fa-users" aria-hidden="true"></i></span>
+                  <span class="nav__list-text">Communities</span>
+                </div></a>
+              <a href="#"><div class="nav__list-item">
+                  <span class="nav__list-icon"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
+                  <span class="nav__list-text">Channels</span>
+                </div></a>
+              <a href="#"><div class="nav__list-item">
+                  <span class="nav__list-icon"><i class="fa fa-play" aria-hidden="true"></i></span>
+                  <span class="nav__list-text">Videos</span>
+                </div></a>
+              <a href="#"><div class="nav__list-item">
+                  <span class="nav__list-icon"><i class="fa fa-eye" aria-hidden="true"></i></span>
+                  <span class="nav__list-text">Creative</span>
+                </div></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="/app.js" charset="utf-8"></script>
 </body>
+
 </html>
