add sidebar subheading lists

--- a/public/index.html
+++ b/public/index.html
@@ -21,26 +21,78 @@
             </div>
             <!-- SIDEBAR LIST -->
             <div class="nav__list">
-              <a href="#"><div class="nav__list-item">
+              <a href="#">
+                <div class="nav__list-item">
                   <span class="nav__list-icon"><i class="fa fa-gamepad" aria-hidden="true"></i></span>
                   <span class="nav__list-text">Games</span>
-                </div></a>
-              <a href="#"><div class="nav__list-item">
+                </div>
+              </a>
+              <a href="#">
+                <div class="nav__list-item">
                   <span class="nav__list-icon"><i class="fa fa-users" aria-hidden="true"></i></span>
                   <span class="nav__list-text">Communities</span>
-                </div></a>
-              <a href="#"><div class="nav__list-item">
+                </div>
+              </a>
+              <a href="#">
+                <div class="nav__list-item">
                   <span class="nav__list-icon"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
                   <span class="nav__list-text">Channels</span>
-                </div></a>
-              <a href="#"><div class="nav__list-item">
+                </div>
+              </a>
+              <a href="#">
+                <div class="nav__list-item">
                   <span class="nav__list-icon"><i class="fa fa-play" aria-hidden="true"></i></span>
                   <span class="nav__list-text">Videos</span>
-                </div></a>
-              <a href="#"><div class="nav__list-item">
+                </div>
+              </a>
+              <a href="#">
+                <div class="nav__list-item">
                   <span class="nav__list-icon"><i class="fa fa-eye" aria-hidden="true"></i></span>
                   <span class="nav__list-text">Creative</span>
-                </div></a>
+                </div>
+              </a>
+            </div>
+            <!-- NAV SUBHEADING PRIME -->
+            <div class="nav__subheading">
+              <h3 class="nav__subheading-title">Free with Prime</h3>
+              <a href="#">
+                <div class="nav__subheading-item">
+                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
+                  <span class="nav__list-text">For Honor Twitch Prime Bundle</span>
+                </div>
+              </a>
+              <a href="#">
+                <div class="nav__subheading-item">
+                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
+                  <span class="nav__list-text">Combat Comics Pack</span>
+                </div>
+              </a>
+            </div>
+            <!-- NAV SUBHEADING RECOMMENDED -->
+            <div class="nav__subheading">
+              <h3 class="nav__subheading-title">Recommended Channels</h3>
+              <a href="#">
+                <div class="nav__subheading-item">
+                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
+                  <span class="nav__list-text">PlayHearthstone</span>
+                </div>
+              </a>
+              <a href="#">
+                <div class="nav__subheading-item">
+                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
+                  <span class="nav__list-text">dreamhackcs</span>
+                </div>
+              </a>
+              <a href="#">
+                <div class="nav__subheading-item">
+                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
+                  <span class="nav__list-text">GamesDoneQuick</span>
+                </div>
+              </a>
+            </div>
+            <!-- NAV SUBHEADING MORE -->
+            <div class="nav__subheading">
+              <h3 class="nav__subheading-title">More at Twitch</h3>
             </div>
           </div>
         </div>
