more sidebar styling

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>12-twitch</title>
   <link rel="stylesheet" href="/app.css">
+  <link rel='shortcut icon' type='image/x-icon' href='./images/Glitch_White_RGB.png' />
 </head>
 
 <body>
@@ -53,46 +54,48 @@
               </a>
             </div>
             <!-- NAV SUBHEADING PRIME -->
-            <div class="nav__subheading">
-              <h3 class="nav__subheading-title">Free with Prime</h3>
-              <a href="#">
-                <div class="nav__subheading-item">
-                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
-                  <span class="nav__list-text">For Honor Twitch Prime Bundle</span>
-                </div>
-              </a>
-              <a href="#">
-                <div class="nav__subheading-item">
-                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
-                  <span class="nav__list-text">Combat Comics Pack</span>
-                </div>
-              </a>
-            </div>
-            <!-- NAV SUBHEADING RECOMMENDED -->
-            <div class="nav__subheading">
-              <h3 class="nav__subheading-title">Recommended Channels</h3>
-              <a href="#">
-                <div class="nav__subheading-item">
-                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
-                  <span class="nav__list-text">PlayHearthstone</span>
-                </div>
-              </a>
-              <a href="#">
-                <div class="nav__subheading-item">
-                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
-                  <span class="nav__list-text">dreamhackcs</span>
-                </div>
-              </a>
-              <a href="#">
-                <div class="nav__subheading-item">
-                  <img src="http://placehold.it/30x30" alt="" class="nav__list-icon">
-                  <span class="nav__list-text">GamesDoneQuick</span>
-                </div>
-              </a>
-            </div>
-            <!-- NAV SUBHEADING MORE -->
-            <div class="nav__subheading">
-              <h3 class="nav__subheading-title">More at Twitch</h3>
+            <div class="nav__content-subheading">
+              <div class="nav__subheading">
+                <h3 class="nav__subheading-title">Free with Prime</h3>
+                <a href="#">
+                  <div class="nav__subheading-item">
+                    <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
+                    <span class="nav__list-text">For Honor Twitch Prime Bundle</span>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="nav__subheading-item">
+                    <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
+                    <span class="nav__list-text">Combat Comics Pack</span>
+                  </div>
+                </a>
+              </div>
+              <!-- NAV SUBHEADING RECOMMENDED -->
+              <div class="nav__subheading">
+                <h3 class="nav__subheading-title">Recommended Channels</h3>
+                <a href="#">
+                  <div class="nav__subheading-item">
+                    <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
+                    <span class="nav__list-text">PlayHearthstone</span>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="nav__subheading-item">
+                    <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
+                    <span class="nav__list-text">dreamhackcs</span>
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="nav__subheading-item">
+                    <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
+                    <span class="nav__list-text">GamesDoneQuick</span>
+                  </div>
+                </a>
+              </div>
+              <!-- NAV SUBHEADING MORE -->
+              <div class="nav__subheading">
+                <h3 class="nav__subheading-title">More at Twitch</h3>
+              </div>
             </div>
           </div>
         </div>
