--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,13 @@
                 <a href="#">
                   <div class="nav__subheading-item">
                     <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
-                    <span class="nav__list-text">For Honor Twitch Prime Bundle</span>
+                    <span class="subheading-text">For Honor Twitch Prime Bundle</span>
                   </div>
                 </a>
                 <a href="#">
                   <div class="nav__subheading-item">
                     <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
-                    <span class="nav__list-text">Combat Comics Pack</span>
+                    <span class="subheading-text">Combat Comics Pack</span>
                   </div>
                 </a>
               </div>
@@ -76,19 +76,19 @@
                 <a href="#">
                   <div class="nav__subheading-item">
                     <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
-                    <span class="nav__list-text">PlayHearthstone</span>
+                    <span class="subheading-text">PlayHearthstone</span>
                   </div>
                 </a>
                 <a href="#">
                   <div class="nav__subheading-item">
                     <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
-                    <span class="nav__list-text">dreamhackcs</span>
+                    <span class="subheading-text">dreamhackcs</span>
                   </div>
                 </a>
                 <a href="#">
                   <div class="nav__subheading-item">
                     <img src="http://placehold.it/30x30" alt="" class="subheading-icon">
-                    <span class="nav__list-text">GamesDoneQuick</span>
+                    <span class="subheading-text">GamesDoneQuick</span>
                   </div>
                 </a>
               </div>
