--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,10 @@
         </div>
       </div>
     </div>
+    <div class="content">
+      <div class="results">
+      </div>
+    </div>
   </div>
 
   <script src="/app.js" charset="utf-8"></script>
