--- a/public/index.html
+++ b/public/index.html
@@ -101,8 +101,11 @@
         </div>
       </div>
     </div>
-    <div class="content">
-      <div class="results">
+    <div class="games">
+      <div class="container">
+        <h1 class="games__heading">All Games</h1>
+        <div class="results">
+        </div>
       </div>
     </div>
   </div>
