margin below bottom nav links

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- SIDEBAR -->
     <div class="nav">
       <!-- <div class="section"> -->
-      <div class="nav__container">
+      <div class="container">
         <div class="nav__content">
           <div class="nav__logo-container">
             <a href="#"><img src="./images/Twitch_White_RGB.png" alt="twitch logo" class="nav__logo"></a>
